# image_tager

./: Cargo.toml
crates/add_image/: Cargo.toml
crates/add_image/src/: main.rs
crates/image-tager/: Cargo.toml
crates/image-tager/src/: lib.rs  qdrant_wrapper.rs  s3client.rs
crates/models/: Cargo.toml
crates/models/src/: models.rs
crates/models/src/models/: wd_tagger.rs
crates/search_image/: Cargo.toml
crates/search_image/src/: main.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
