[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
blake3 = { version = "^1.5.3", features = ["mmap"] }
clap = { version = "^4.5.16", features = ["derive"] }
config = "^0.14.0"
dotenvy = "^0.15.7"
dunce = "^1.0.5"
futures-util = "^0.3.30"
image = "^0.25.2"
indicatif = { version = "^0.17.8", features = ["futures"] }
memmap2 = "^0.9.4"
num-traits = "^0.2.19"
num_cpus = "^1.16.0"
qdrant-client = "^1.11.1"
reqwest = "^0.12.5"
serde = { version = "^1.0.208", features = ["derive"] }
tokio = { version = "^1.39.3", features = ["full"] }
uuid = { version = "^1.10.0", features = ["v5", "fast-rng"] }
walkdir = "^2.5.0"

# S3
aws-config = { version = "^1.5.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "^1.45.0"

# Models
hf-hub = "^0.3.2"
ndarray = "^0.16.1"
ort = { version = "^2.0.0-rc.5", features = ["cuda", "load-dynamic"] }

[profile.dev.package.image]
opt-level = 3
