[package]
name = "add_image"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
blake3 = { workspace = true }
clap = { workspace = true }
dunce = { workspace = true }
futures-util = { workspace = true }
image = { workspace = true }
indicatif = { workspace = true }
num_cpus = { workspace = true }
qdrant-client = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }

image-tager = { path = "../image-tager" }
models = { path = "../models" }
