[package]
name = "image-tager"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
indicatif = { workspace = true }
qdrant-client = { workspace = true }
serde = { workspace = true }
